--- a/modules/billing/locale/fr_FR.po
+++ b/modules/billing/locale/fr_FR.po
@@ -1,10 +1,10 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:contract.contract,manual_billing:"
 msgid "Manual Billing"
-msgstr "Facturation manuelle"
+msgstr "Tarification Manuelle"
 
 msgctxt "view:contract.contract:"
 msgid "Billing"
