--- a/modules/rule_engine/locale/fr_FR.po
+++ b/modules/rule_engine/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -397,39 +397,39 @@ msgctxt "field:rule_engine.parameter,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:rule_engine.rule_engine-tag,create_date:"
+msgctxt "field:rule_engine-tag,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:rule_engine.rule_engine-tag,create_date_:"
+msgctxt "field:rule_engine-tag,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:rule_engine.rule_engine-tag,create_uid:"
+msgctxt "field:rule_engine-tag,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:rule_engine.rule_engine-tag,id:"
+msgctxt "field:rule_engine-tag,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:rule_engine.rule_engine-tag,rec_name:"
+msgctxt "field:rule_engine-tag,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:rule_engine.rule_engine-tag,rule_engine:"
+msgctxt "field:rule_engine-tag,rule_engine:"
 msgid "Rule Engine"
 msgstr "Moteur de Règle"
 
-msgctxt "field:rule_engine.rule_engine-tag,tag:"
+msgctxt "field:rule_engine-tag,tag:"
 msgid "Tag"
 msgstr "Label"
 
-msgctxt "field:rule_engine.rule_engine-tag,write_date:"
+msgctxt "field:rule_engine-tag,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:rule_engine.rule_engine-tag,write_uid:"
+msgctxt "field:rule_engine-tag,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -445,55 +445,55 @@ msgctxt "field:rule_engine.run_tests.report,report:"
 msgid "Report"
 msgstr "Rapport"
 
-msgctxt "field:rule_engine.tag,childs:"
+msgctxt "field:tag,childs:"
 msgid "Childs"
 msgstr "Enfants"
 
-msgctxt "field:rule_engine.tag,code:"
+msgctxt "field:tag,code:"
 msgid "Code"
 msgstr "Code"
 
-msgctxt "field:rule_engine.tag,create_date:"
+msgctxt "field:tag,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
-msgctxt "field:rule_engine.tag,create_date_:"
+msgctxt "field:tag,create_date_:"
 msgid "Creation date"
 msgstr "Creation date"
 
-msgctxt "field:rule_engine.tag,create_uid:"
+msgctxt "field:tag,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:rule_engine.tag,id:"
+msgctxt "field:tag,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:rule_engine.tag,must_expand_tree:"
+msgctxt "field:tag,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-msgctxt "field:rule_engine.tag,name:"
+msgctxt "field:tag,name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:rule_engine.tag,parent:"
+msgctxt "field:tag,parent:"
 msgid "Parent"
 msgstr "Parent"
 
-msgctxt "field:rule_engine.tag,rec_name:"
+msgctxt "field:tag,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:rule_engine.tag,rules:"
+msgctxt "field:tag,rules:"
 msgid "Rules"
 msgstr "Règles"
 
-msgctxt "field:rule_engine.tag,write_date:"
+msgctxt "field:tag,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:rule_engine.tag,write_uid:"
+msgctxt "field:tag,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -789,7 +789,7 @@ msgctxt "model:rule_engine.parameter,name:"
 msgid "Rule Engine Parameter"
 msgstr "Paramètre du moteur de règle"
 
-msgctxt "model:rule_engine.rule_engine-tag,name:"
+msgctxt "model:rule_engine-tag,name:"
 msgid "Relation between rule engine and tag"
 msgstr "Ralation entre Moteur de règle et Label"
 
@@ -797,7 +797,7 @@ msgctxt "model:rule_engine.run_tests.report,name:"
 msgid "Test Run Report"
 msgstr "Tester le rapport d'exécution"
 
-msgctxt "model:rule_engine.tag,name:"
+msgctxt "model:tag,name:"
 msgid "Tag"
 msgstr "Label"
 
@@ -921,15 +921,15 @@ msgctxt "view:rule_engine.run_tests.report:"
 msgid "Tests Report"
 msgstr ""
 
-msgctxt "view:rule_engine.tag:"
+msgctxt "view:tag:"
 msgid "Rules"
 msgstr "Règles"
 
-msgctxt "view:rule_engine.tag:"
+msgctxt "view:tag:"
 msgid "Tag"
 msgstr "Label"
 
-msgctxt "view:rule_engine.tag:"
+msgctxt "view:tag:"
 msgid "Tree"
 msgstr "Arbre"
 
