renaming ins_claim to claim

--- a/modules/insurance_claim_process/locale/fr_FR.po
+++ b/modules/insurance_claim_process/locale/fr_FR.po
@@ -1,96 +1,96 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:ins_claim.claim:"
+msgctxt "error:claim.claim:"
 msgid "Everything is good !"
 msgstr "Tout est bon!"
 
-msgctxt "error:ins_claim.claim:"
+msgctxt "error:claim.claim:"
 msgid "Object %s is currently locked by user %s"
 msgstr "L'objet %s est verrouillé par l'utilisateur %s"
 
-msgctxt "error:ins_claim.declaration_process_finder:"
+msgctxt "error:claim.declaration_process_finder:"
 msgid "Please pick a process from the selection"
 msgstr "Choisir un processus de la sélection"
 
-msgctxt "field:ins_claim.claim,contact_history:"
+msgctxt "field:claim.claim,contact_history:"
 msgid "History"
 msgstr "Historique"
 
-msgctxt "field:ins_claim.claim,current_log:"
+msgctxt "field:claim.claim,current_log:"
 msgid "Current Log"
 msgstr ""
 
-msgctxt "field:ins_claim.claim,current_state:"
+msgctxt "field:claim.claim,current_state:"
 msgid "Current State"
 msgstr "Etat Courant"
 
-msgctxt "field:ins_claim.claim,doc_received:"
+msgctxt "field:claim.claim,doc_received:"
 msgid "All Document Received"
 msgstr "Documents Reçus"
 
-msgctxt "field:ins_claim.claim,indemnifications:"
+msgctxt "field:claim.claim,indemnifications:"
 msgid "Indemnifications"
 msgstr "Indemnisations"
 
-msgctxt "field:ins_claim.claim,indemnifications_consult:"
+msgctxt "field:claim.claim,indemnifications_consult:"
 msgid "Indemnifications"
 msgstr "Indemnisations"
 
-msgctxt "field:ins_claim.claim,is_pending_indemnification:"
+msgctxt "field:claim.claim,is_pending_indemnification:"
 msgid "Pending Indemnification"
 msgstr "Indemnisation en attente"
 
-msgctxt "field:ins_claim.claim,logs:"
+msgctxt "field:claim.claim,logs:"
 msgid "Task"
 msgstr "Tâche"
 
-msgctxt "field:ins_claim.declaration_process_parameters,claim:"
+msgctxt "field:claim.declaration_process_parameters,claim:"
 msgid "Claim"
 msgstr "Sinistre"
 
-msgctxt "field:ins_claim.declaration_process_parameters,claims:"
+msgctxt "field:claim.declaration_process_parameters,claims:"
 msgid "Claims"
 msgstr "Sinistres"
 
-msgctxt "field:ins_claim.declaration_process_parameters,date:"
+msgctxt "field:claim.declaration_process_parameters,date:"
 msgid "Date"
 msgstr "Date"
 
-msgctxt "field:ins_claim.declaration_process_parameters,good_process:"
+msgctxt "field:claim.declaration_process_parameters,good_process:"
 msgid "Good Process"
 msgstr "Processus"
 
-msgctxt "field:ins_claim.declaration_process_parameters,id:"
+msgctxt "field:claim.declaration_process_parameters,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:ins_claim.declaration_process_parameters,model:"
+msgctxt "field:claim.declaration_process_parameters,model:"
 msgid "Model"
 msgstr "Modèle"
 
-msgctxt "field:ins_claim.declaration_process_parameters,must_expand_tree:"
+msgctxt "field:claim.declaration_process_parameters,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-msgctxt "field:ins_claim.declaration_process_parameters,party:"
+msgctxt "field:claim.declaration_process_parameters,party:"
 msgid "Party"
 msgstr "Acteur"
 
-msgctxt "field:ins_claim.loss,benefit_to_deliver:"
+msgctxt "field:claim.loss,benefit_to_deliver:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "field:ins_claim.loss,benefits:"
+msgctxt "field:claim.loss,benefits:"
 msgid "Benefits"
 msgstr "Prestations"
 
-msgctxt "field:ins_claim.loss,can_modify_benefit:"
+msgctxt "field:claim.loss,can_modify_benefit:"
 msgid "Can Modify Benefit?"
 msgstr ""
 
-msgctxt "model:ins_claim.declaration_process_parameters,name:"
+msgctxt "model:claim.declaration_process_parameters,name:"
 msgid "Declaration Process Parameters"
 msgstr "Paramètres du Processus de Déclaration Sinistre"
 
@@ -114,16 +114,16 @@ msgctxt "selection:process.process_desc,kind:"
 msgid "Claim Reopening"
 msgstr "Réouverture de Sinistre"
 
-msgctxt "view:ins_claim.loss:"
+msgctxt "view:claim.loss:"
 msgid "Loss"
 msgstr "Préjudice"
 
 msgctxt ""
-"wizard_button:ins_claim.declaration_process_finder,process_parameters,action:"
+"wizard_button:claim.declaration_process_finder,process_parameters,action:"
 msgid "Start Process"
 msgstr "Démarrer le processus"
 
 msgctxt ""
-"wizard_button:ins_claim.declaration_process_finder,process_parameters,end:"
+"wizard_button:claim.declaration_process_finder,process_parameters,end:"
 msgid "Cancel"
 msgstr "Annuler"
