--- a/modules/loan_claim/locale/fr_FR.po
+++ b/modules/loan_claim/locale/fr_FR.po
@@ -1,7 +1,7 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:ins_contract.delivered_service,loan:"
+msgctxt "field:contract.delivered_service,loan:"
 msgid "Loan"
 msgstr "Prêt"
