--- a/modules/contract/locale/fr_FR.po
+++ b/modules/contract/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -473,3 +473,52 @@ msgstr "Historique des Statuts"
 msgctxt "view:contract.subscribed_option:"
 msgid "option"
 msgstr "option"
+
+
+msgctxt "field:contract.delivered_service,contract:"
+msgid "Contract"
+msgstr "Contrat"
+
+msgctxt "field:contract.delivered_service,create_date:"
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:contract.delivered_service,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
+msgctxt "field:contract.delivered_service,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:contract.delivered_service,func_error:"
+msgid "Error"
+msgstr "Erreur"
+
+msgctxt "field:contract.delivered_service,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:contract.delivered_service,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Etendre Arbre"
+
+msgctxt "field:contract.delivered_service,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:contract.delivered_service,status:"
+msgid "Status"
+msgstr "Statut"
+
+msgctxt "field:contract.delivered_service,subscribed_service:"
+msgid "Coverage"
+msgstr "Garantie"
+
+msgctxt "field:contract.delivered_service,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:contract.delivered_service,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
